--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -41,4 +41,8 @@
   <welcome-file>index.html</welcome-file>
   <!-- <welcome-file>index.htm</welcome-file> <welcome-file>index.jsp</welcome-file> -->
  </welcome-file-list>
+ <error-page>
+  <error-code>404</error-code>
+  <location>/pages/erreur.jsf</location>
+ </error-page>
 </web-app>
