--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,6 +3,16 @@
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
  <display-name>MediArea</display-name>
  <context-param>
+     <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
+     <param-value>6Ld7pMESAAAAAHd1VihJkqPUXAJVwU3Cghc8fzrq</param-value>
+ </context-param>
+
+ <context-param>
+     <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
+     <param-value>6Ld7pMESAAAAAMhr5WSk5bcRrff8Y08NtDi8Buoq</param-value>
+ </context-param>
+ 
+ <context-param>
   <description>Upload passe par un fichier tmp ? (boolean)</description>
   <param-name>createTempFiles</param-name>
   <param-value>true</param-value>
@@ -16,6 +26,15 @@
   <param-name>maxRequestSize</param-name>
   <param-value>1000000000</param-value>
  </context-param>
+<filter>
+  <filter-name>PrimeFaces FileUpload Filter</filter-name>
+  <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+</filter>
+<filter-mapping>
+  <filter-name>PrimeFaces FileUpload Filter</filter-name>
+  <servlet-name>Faces Servlet</servlet-name>
+</filter-mapping>
+ 
  <servlet>
   <servlet-name>Faces Servlet</servlet-name>
   <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
